<?xml version="1.0"?>
<package format="2">
  <name>cnbiros_state_control</name>
  <version>0.9.5</version>
  <description>CNBIROS Wheelchair State control package</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cnbiros_joystick</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- ADD CNBIROS_BCI -->

</package>
